<resources>
    <string name="app_name">holo_app_chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Xin chào !"</string>
    <string name="invalid_username">Tên đăng nhập không hợp lệ</string>
    <string name="invalid_password">Mật khẩu 5 ký tự trở lên</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <string name="promt_forgotPassword">QUÊN MẬT KHẨU ?</string>
    <string name="promt_register">ĐĂNG KÝ NGAY</string>
    <string name="promt_notHaveAcc">Không có tài khoản?</string>
    <string name="promt_haveAcc">Bạn đã có tài khoản?</string>
    <string name="promt_wantHaveAcc">Bạn chưa có tài khoản?</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_tin_nhan">Tin nhắn</string>
    <string name="nav_danh_ba">Danh bạ</string>
    <string name="nav_nhom">Nhóm</string>
    <string name="nav_tai_khoan">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>